[package]
name = "ktail"
version = "0.1.0"
edition = "2021"

[dependencies]
# Kubernetes client
kube = { version = "0.92", features = ["client", "runtime"] }
k8s-openapi = { version = "0.22", features = ["v1_30"] }
tokio = { version = "1", features = ["full"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Output formatting
colored = "2"
syntect = "5"
regex = "1"

# Async utilities
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Utility
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# Backoff retry logic
backoff = { version = "0.4", features = ["tokio"] }

# TOML and other utilities
tokio-util = { version = "0.7", features = ["codec"] }
atty = "0.2"
serde_json = "1"
